# condif2css

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/condif2css/: __init__.py  color.py  core.py  css.py  dxf.py  processor.py  themes.py
src/condif2css/exparser/: __init__.py
tests/: test_color.py  test_core_additional.py  test_core_generator.py  test_css.py  test_processor.py  test_public_api.py  test_themes.py
