# SPDX-FileCopyrightText: 2026 Jose Gonzalo Covarrubias
[project]
name = "condif2css"
authors = [
    { name = "Jose Gonzalo Covarrubias", email = "gocova.dev+condif2css@gmail.com" },
]
description = "Evaluate Excel conditional formatting rules and generate reusable CSS classes from openpyxl styles."
license = "MIT OR Apache-2.0"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "blake3>=1.0.4",
    "lxml>=5.3.0",
    "mvin==0.15.0rc1",
    "openpyxl>=3.1.5",
]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/gocova/condif2css"
Repository = "https://github.com/gocova/condif2css"
Issues = "https://github.com/gocova/condif2css/issues"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
